--- a/src/css-folder/content.css
+++ b/src/css-folder/content.css
@@ -48,7 +48,7 @@
     width: 50px;
     height: 50px;
 }
-.content .container .todo .detail {
+.content .container .todo .detail, .edit {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,21 +58,25 @@
     width: 120px;
 }
 .content .container .todo .date {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70px;
+    height: 25px;
+    padding: 3px 9px;
     font-size: small;
+    font-weight: bold;
     border: none;
-    color: rgb(26, 25, 25);
+    color: rgb(113, 105, 214);
 }
 .content .container .todo .detail-btn, .date, .edit-btn {
     display: flex;
     justify-content: center;
     border-radius: 5px;
-    border: 2px solid rgb(175, 175, 202);
-    color: rgb(175, 175, 202);
+    border: 2px solid rgb(106, 106, 179);
+    color: rgb(106, 106, 179);
     padding: 3px 10px;
     background: transparent;
-}
-.content .container .todo .detail-btn:hover {
-    cursor: pointer;
 }
 .content .container .todo .delete {
     display: flex;
@@ -90,6 +94,6 @@
     padding: 3px 10px;
     background: transparent;
 }
-.content .container .todo .delete-btn:hover {
+.content .container .todo .delete-btn:hover, .detail-btn:hover, .edit-btn {
     cursor: pointer;
 }
