--- a/src/css-folder/edit.css
+++ b/src/css-folder/edit.css
@@ -20,6 +20,14 @@
     font-size: 25px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+.edit-container .edit-box .warning {
+    display: none;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px;
+    background: rgb(223, 66, 66);
+    color: white;
+    font-size: small;
+}
 .edit-container .edit-box .close:hover{
     cursor: pointer;
 }
@@ -27,6 +35,16 @@
     margin-top: 50px;
 
 }
+.edit-container .edit-box .select {
+    padding: 7px;
+    margin: 20px 0 10px 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    opacity: 0.8;
+    width: 80%;
+    font-size: 18px;
+}
+
 .edit-container .edit-box .textarea {
     border: none;
     outline: none;
