--- a/src/css-folder/edit.css
+++ b/src/css-folder/edit.css
@@ -18,6 +18,7 @@
     width: 30px;
     padding: 10px 10px 10px 10px;
     font-size: 25px;
+    margin-right: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .edit-container .edit-box .warning {
@@ -91,8 +92,9 @@
 .edit-container .edit-box .confirm-edit {
     display: flex;
     align-items: center;
-    width: 40px;
-    height: 15px;
+    justify-content: center;
+    padding: 5px 0;
+    width: 80px;
     border-radius: 5px;
     opacity: 0.8;
     margin-left: 20px;
@@ -103,4 +105,19 @@
 }
 .edit-container .edit-box .confirm-edit:hover {
     cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+    .edit-container .edit-box {
+        width: 80%;
+    } 
+    .edit-container .edit-box .change-priority {
+        flex-direction: column;
+    }
+    .edit-container .edit-box .change-priority .priority {
+        margin-bottom: 4px;
+    }
+    .edit-container .edit-box .confirm-edit {
+        font-size: 15px;
+    }
 }
