--- a/src/css-folder/sidebar.css
+++ b/src/css-folder/sidebar.css
@@ -8,6 +8,7 @@
 } 
 
 .sidebar {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     flex-direction: column;
     margin-top: 10px;
@@ -53,4 +54,15 @@
     opacity: 0.9;
     padding: 10px 0 10px 0;
     background: var(--light-dark);
+}
+@media only screen and (max-width: 700px){
+    .sidebar {
+        margin-top: 0;
+    }
+    .home, .project {
+        font-size: 18px;
+    }
+    .cate {
+        font-size: 14px;
+    }
 }
