--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,10 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 body {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     display: grid;
     grid-template-columns: 300px auto;
     grid-template-rows: 80px auto;
@@ -28,4 +30,20 @@ body {
 .content {
     background: var(--secondary-light);
     grid-column: 2/4;
+}
+@media only screen and (max-width: 700px){
+    body {
+        grid-template-columns: 1fr;
+        grid-template-rows: 80px 175px 1fr;
+
+    }
+    .nav, .sidebar, .content {
+        grid-column: 1/4;
+    }
+    .content {
+        grid-column: 1/4;
+    }
+    .sidebar{
+        height: 0;
+    }
 }
