--- a/src/css-folder/content.css
+++ b/src/css-folder/content.css
@@ -119,11 +119,13 @@
     cursor: pointer;
 }
 
+@media only screen and (max-width: 700px){
+    .content .container .todo:first-child {
+        margin-top: 50px;
+    }
+}
 
 @media only screen and (max-width: 580px){
-    .content .container .todo:first-child {
-        margin-top: 0;
-    }
     .content .container .todo {
         width: 70%;
         height: 35px;
@@ -143,13 +145,11 @@
         width: 60%;
         height: 35px;
     }
-} 
-/* @media only screen and (max-width: 440px){
-    .content .container .todo {
-        width: 60%;
-        height: 35px;
+    .content .container .todo:first-child {
+        margin-top: 50px;
     }
-}  */
+} 
+
 @media only screen and (max-width: 414px){
     .content .container .todo {
         font-size: x-small;
@@ -171,5 +171,21 @@
         width: 17px;
         height: 17px;
         padding: 0;
+    }
+} 
+@media only screen and (max-width: 360px){
+    .content .container .todo {
+        width: 45%;
+        height: 35px;
+
+    }
+    .content .container .todo .item {
+        height: 100%;
+        width: 70%;
+        font-size: x-small;
+    }
+    .content .container .todo .date {
+        width: 40px;
+        font-size: xx-small;
     }
 } 
