--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
     --secondary-dark: #444;
     --primary-light: #eee;
     --secondary-light: #ddd;
-
+    --sidebarheight: 175px;
 }
 
 * {
@@ -34,13 +34,10 @@ body {
 @media only screen and (max-width: 700px){
     body {
         grid-template-columns: 1fr;
-        grid-template-rows: 80px 175px 1fr;
-
+        grid-template-rows: 80px 1fr;
+        /* 175px */
     }
-    .nav, .sidebar, .content {
-        grid-column: 1/4;
-    }
-    .content {
+    .nav, .content {
         grid-column: 1/4;
     }
     .sidebar{
