--- a/src/style.css
+++ b/src/style.css
@@ -31,14 +31,16 @@ body {
     background: var(--secondary-light);
     grid-column: 2/4;
 }
+
 @media only screen and (max-width: 700px){
+    :root {
+        overflow: hidden;
+    }
     body {
-        width: auto;
+        width: 100%;
         overflow-x: hidden;
-        /* overflow: hidden; */
         grid-template-columns: 1fr;
         grid-template-rows: 80px 1fr;
-        /* 175px */
     }
     .nav, .content {
         grid-column: 1/4;
