--- a/src/css-folder/sidebar.css
+++ b/src/css-folder/sidebar.css
@@ -61,7 +61,7 @@
         background: rgb(122, 122, 238);
         bottom: 0;
         display: none;
-        height: auto;
+        height: 240px;
         margin-top: 0;
     }
     .home, .project {
