--- a/src/style.css
+++ b/src/style.css
@@ -34,13 +34,15 @@ body {
 
 @media only screen and (max-width: 700px){
     :root {
+        margin: 0;
         overflow-x: hidden;
+        /* width: 100%; */
     }
     body {
         width: 100%;
         overflow-x: hidden;
         grid-template-columns: 1fr;
-        grid-template-rows: 80px 1fr;
+        grid-template-rows: 80px, 1fr;
     }
     .nav, .content {
         grid-column: 1/4;
