--- a/src/css-folder/content.css
+++ b/src/css-folder/content.css
@@ -9,9 +9,9 @@
 
 .content {
     width: 100%;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
-    align-items: center;
     justify-content: center;
     background: var(--primary-dark);
 }
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 100%;
 }
 .content .container .todo {
@@ -38,6 +37,9 @@
 }
 .content .container .todo:first-child {
     margin-top: 50px;
+}
+.content .container .todo:last-child {
+    margin-bottom: 50px;
 }
 .content .container .todo .item {
     display: flex;
@@ -120,6 +122,10 @@
 }
 
 @media only screen and (max-width: 700px){
+    .content {
+        width: 100%;
+        min-height: min-content;
+    }
     .content .container .todo:first-child {
         margin-top: 50px;
     }
