--- a/src/style.css
+++ b/src/style.css
@@ -13,41 +13,23 @@
 }
 body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    display: grid;
-    grid-template-columns: 300px auto;
-    grid-template-rows: 80px auto;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
 } 
-.nav {
-    background: black;
-    color: var(--primary-light);
-    grid-column: 1/4;
-}
-.sidebar {
-    background: var(--primary-light);
-}
-.content {
-    background: var(--secondary-light);
-    grid-column: 2/4;
+.todo-container {
+    display: flex;
+    flex-direction: row;
 }
 
 @media only screen and (max-width: 700px){
-    :root {
-        margin: 0;
-        overflow-x: hidden;
-        /* width: 100%; */
-    }
     body {
-        width: 100%;
+        background: var(--primary-dark);
+    }
+    .todo-container {
         overflow-x: hidden;
-        grid-template-columns: 1fr;
-        grid-template-rows: 80px, 1fr;
-    }
-    .nav, .content {
-        grid-column: 1/4;
-    }
-    .sidebar{
-        height: 0;
-    }
+        display: flex;
+        flex-direction: column;
+    } 
 }
